python/testData/quickFixes/PyAddImportQuickFixTest/nestedClassQualifiedAutoImport/main.py
<error descr="Unresolved reference 'Inner'">In<caret>ner</error>.do_something()
